build_output5.txt
warning: neuro-spike-kernels@0.9.2: ✓ compiled spiking_network.cu → spiking_network_sm_120.ptx (PTX version patched to 8.5)
warning: neuro-spike-kernels@0.9.2: ✓ compiled vector_similarity.cu → vector_similarity_sm_120.ptx (PTX version patched to 8.5)
warning: neuro-spike-kernels@0.9.2: ✓ compiled satsolver.cu → satsolver_sm_120.ptx (PTX version patched to 8.5)
   Compiling neuro-spike-core v0.9.2 (/home/raulmc/ship_of_theseus_rs/neuro-spike/neuro-spike-core)
error[E0583]: file not found for module `trading`
  --> neuro-spike/neuro-spike-core/src/bin/market_pilot.rs:23:1
   |
23 | mod trading;
   | ^^^^^^^^^^^^
   |
   = help: to create the module `trading`, create file "neuro-spike/neuro-spike-core/src/bin/trading.rs" or "neuro-spike/neuro-spike-core/src/bin/trading/mod.rs"
   = note: if there is a `mod trading` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `market`
  --> neuro-spike/neuro-spike-core/src/bin/market_pilot.rs:24:1
   |
24 | mod market;
   | ^^^^^^^^^^^
   |
   = help: to create the module `market`, create file "neuro-spike/neuro-spike-core/src/bin/market.rs" or "neuro-spike/neuro-spike-core/src/bin/market/mod.rs"
   = note: if there is a `mod market` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `backend`
  --> neuro-spike/neuro-spike-core/src/bin/market_pilot.rs:25:1
   |
25 | mod backend;
   | ^^^^^^^^^^^^
   |
   = help: to create the module `backend`, create file "neuro-spike/neuro-spike-core/src/bin/backend.rs" or "neuro-spike/neuro-spike-core/src/bin/backend/mod.rs"
   = note: if there is a `mod backend` elsewhere in the crate already, import it with `use crate::...` instead

error[E0282]: type annotations needed
   --> neuro-spike/neuro-spike-core/src/bin/market_pilot.rs:104:9
    |
104 |     let first_feed = poll_market(&client, &zero_feed).await;
    |         ^^^^^^^^^^
105 |     let mut prev_feed = first_feed.clone();
    |                         ---------- type must be known at this point
    |
help: consider giving `first_feed` an explicit type
    |
104 |     let first_feed: /* Type */ = poll_market(&client, &zero_feed).await;
    |                   ++++++++++++

Some errors have detailed explanations: E0282, E0583.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `neuro-spike-core` (bin "market_pilot") due to 4 previous errors
